# Smart_Search_Tool

./: README.md  package-lock.json  readme-template.md
app/: docker-compose.yml
app/db/: db.sqlite3
app/frontend/: .gitignore  Dockerfile  eslint.config.js  index.html  jest.config.js  jest.setup.ts  nginx.conf  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
app/frontend/src/: App.tsx  apiConfig.ts  main.tsx
app/frontend/src/actions/: items.ts
app/frontend/src/components/: About.tsx  BreadcrumbsComponent.tsx  Chat.tsx  CircularProgressBar.tsx  Contact.tsx  Contacts.tsx  DetailModal.tsx  FilterForm.tsx  GoogleMapComponent.tsx  Home.tsx  HomeCard.tsx  HomeList.tsx  HomeListItem.tsx  LoadingSpiner.tsx  Login.tsx  MapHomeDetail.tsx  NumberSelector.tsx  PageTransition.tsx  Profile.tsx  Results.tsx  SmartCMA.tsx  SmartReports.tsx  SmartSearch.tsx  VerticalNavbar.tsx
app/frontend/src/config/: client.ts
app/frontend/src/lib/: ApiContext.tsx  MapConstants.ts  MarkerIcons.ts  messageSlice.ts  placeUtils.ts  resultsSlice.ts  searchSlice.ts  store.ts  types.ts
app/server/: .gitignore  Dockerfile  Makefile  pyproject.toml  requirements.txt  run.py
app/server/db/: init_toronto_database.sql  setup.py
app/server/src/: app.py  chatbot.py  db.py
app/server/tests/: backend_tests.py
deliverables/D1/: planning.md
deliverables/D2/: sub-team-5.2_README.md  sub-team-5.2_report.md  subteam-1_report.md
deliverables/D3/: iteration-03-review.md
deliverables/D4/: review_template.md
deliverables/Team/: Team-5-bob_2_final_v2.txt.py.csv  stakeholders.txt
(+5 files in other folders)
